import React from 'react';
import { render } from '@testing-library/react';
import Login from "./Login";
import {Provider} from "react-redux";
import configureMockStore from 'redux-mock-store';
import Leaderboard from "./LeaderBoard";

const mockStore = configureMockStore();
const store = mockStore({
    users :{
        sarahedo: {
            id: 'sarahedo',
            password:'password123',
            name: 'Sarah Edo',
            avatarURL: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeBQJNbpRoPUsjSDe7qiLV8-JyFooRqCkUJQ&s",
            answers: {
                "8xf0y6ziyjabvozdd253nd": 'optionOne',
                "6ni6ok3ym7mf1p33lnez": 'optionTwo',
                "am8ehyc8byjqgar0jgpub9": 'optionTwo',
                "loxhs1bqm25b708cmbf3g": 'optionTwo'
            },
            questions: ['8xf0y6ziyjabvozdd253nd', 'am8ehyc8byjqgar0jgpub9']
        },
        tylermcginnis: {
            id: 'tylermcginnis',
            password:'abc321',
            name: 'Tyler McGinnis',
            avatarURL: "https://static.vecteezy.com/system/resources/previews/002/002/403/large_2x/man-with-beard-avatar-character-isolated-icon-free-vector.jpg",
            answers: {
                "vthrdm985a262al8qx3do": 'optionOne',
                "xj352vofupe1dqz9emx13r": 'optionTwo',
            },
            questions: ['loxhs1bqm25b708cmbf3g', 'vthrdm985a262al8qx3do'],
        },
        mtsamis: {
            id: 'mtsamis',
            password:'xyz123',
            name: 'Mike Tsamis',
            avatarURL: "https://static.vecteezy.com/system/resources/thumbnails/006/487/917/small_2x/man-avatar-icon-free-vector.jpg",
            answers: {
                "xj352vofupe1dqz9emx13r": 'optionOne',
                "vthrdm985a262al8qx3do": 'optionTwo',
                "6ni6ok3ym7mf1p33lnez": 'optionOne'
            },
            questions: ['6ni6ok3ym7mf1p33lnez', 'xj352vofupe1dqz9emx13r'],
        },
        zoshikanlu: {
            id: 'zoshikanlu',
            password:'pass246',
            name: 'Zenobia Oshikanlu',
            avatarURL: "https://www.svgrepo.com/show/382100/female-avatar-girl-face-woman-user-7.svg",
            answers: {
                "xj352vofupe1dqz9emx13r": 'optionOne',
            },
            questions: [],
        }
    },
    questions : {
        "8xf0y6ziyjabvozdd253nd": {
            id: '8xf0y6ziyjabvozdd253nd',
            author: 'sarahedo',
            timestamp: 1467166872634,
            optionOne: {
                votes: ['sarahedo'],
                text: 'Build our new application with Javascript',
            },
            optionTwo: {
                votes: [],
                text: 'Build our new application with Typescript'
            }
        },
        "6ni6ok3ym7mf1p33lnez": {
            id: '6ni6ok3ym7mf1p33lnez',
            author: 'mtsamis',
            timestamp: 1468479767190,
            optionOne: {
                votes: [],
                text: 'hire more frontend developers',
            },
            optionTwo: {
                votes: ['mtsamis', 'sarahedo'],
                text: 'hire more backend developers'
            }
        },
        "am8ehyc8byjqgar0jgpub9": {
            id: 'am8ehyc8byjqgar0jgpub9',
            author: 'sarahedo',
            timestamp: 1488579767190,
            optionOne: {
                votes: [],
                text: 'conduct a release retrospective 1 week after a release',
            },
            optionTwo: {
                votes: ['sarahedo'],
                text: 'conduct release retrospectives quarterly'
            }
        },
        "loxhs1bqm25b708cmbf3g": {
            id: 'loxhs1bqm25b708cmbf3g',
            author: 'tylermcginnis',
            timestamp: 1482579767190,
            optionOne: {
                votes: [],
                text: 'have code reviews conducted by peers',
            },
            optionTwo: {
                votes: ['sarahedo'],
                text: 'have code reviews conducted by managers'
            }
        },
        "vthrdm985a262al8qx3do": {
            id: 'vthrdm985a262al8qx3do',
            author: 'tylermcginnis',
            timestamp: 1489579767190,
            optionOne: {
                votes: ['tylermcginnis'],
                text: 'take a course on ReactJS',
            },
            optionTwo: {
                votes: ['mtsamis'],
                text: 'take a course on unit testing with Jest'
            }
        },
        "xj352vofupe1dqz9emx13r": {
            id: 'xj352vofupe1dqz9emx13r',
            author: 'mtsamis',
            timestamp: 1493579767190,
            optionOne: {
                votes: ['mtsamis', 'zoshikanlu'],
                text: 'deploy to production once every two weeks',
            },
            optionTwo: {
                votes: ['tylermcginnis'],
                text: 'deploy to production once every month'
            }
        },
    }
});

describe('Login Component', () => {
    it('renders initial login form correctly', () => {
        // Render the Login component
        let login;
        login = render(
            <Provider store={store}>
                <Login/>
            </Provider>
        );


        // Assert that the rendered output matches the snapshot
        expect(login).toMatchSnapshot();

    });

});

describe('Leaderboard Component ', () => {
    it('renders Leaderboard correctly', () => {
        // Simulate user input and render the Login component
        let nav;
        nav = render(
            <Provider store={store}>
                <Leaderboard />
            </Provider>
        );

        expect(nav).toMatchSnapshot();
    });
});

